...
              border: Border.all(color: Colors.white),
              borderRadius: BorderRadius.circular(12.0), // Rounded corners
            ),
            width: MediaQuery.of(context).size.width * 0.7,
            child: SingleChildScrollView(
              child: TextField(
                key: const Key('chatMessageField'),
                focusNode: textFocus,
                controller: textEditingController,
                cursorColor: Colors.green, // Custom cursor color
                cursorWidth: 2.0, // Custom cursor width
                style: const TextStyle(color: Colors.white, fontSize: 16.0), // Text style
                decoration: const InputDecoration(
...
                  addChatMessage();
                },
              ),
            ),
          ),
          IconButton(
            key: const Key('sendIconButton'),
            icon: const Icon(Icons.send),
            onPressed: addChatMessage,
          ),
          
              ],
            ),
...
