...
            ),
          ),
       Expanded(
  flex: 7,
  child: ongoingChats.isNotEmpty
      ? ListView.builder(
         key: const Key('chatListView'),
          itemCount: ongoingChats.length,
          itemBuilder: (context, index) {
            final chat = ongoingChats[index];
            return GestureDetector(
              onTap: () {
                Navigator.of(context).push(
...
